turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:15: error: not found: value color
        if(i==color.length-1) {
              ^LangtonsAnt:19: error: type mismatch;
 found   : Int
 required: java.awt.Color
          setCouleurSol(i+1)
                         ^LangtonsAnt:25: error: not found: value color
        if(i==color.length-1) {
              ^LangtonsAnt:29: error: type mismatch;
 found   : Int
 required: java.awt.Color
          setCouleurSol(i+1)
                         ^