turmites.lessons.turmites.langtoncolors.LangtonColors.scala.code
def setCouleurSol(c:Color) {
  setCouleurBrosse(c:Color)
  baisseBrosse()
  leveBrosse()
}

def step(rule:Array[Char], colors:Array[Color]) {
  var couleur = false
  for(i<-0 to colors.length-1) {
    if(getCouleurSol()==colors(i) && couleur==false) {
      if(rule(i)=='R') {
        droite()
        avance()
        if(i==color.length-1) {
          setCouleurSol(colors(0))
        }
        else {
          setCouleurSol(i+1)
        }
      }
      else if(rule(i)=='L') {
        gauche()
        avance()
        if(i==color.length-1) {
          setCouleurSol(colors(0))
        }
        else {
          setCouleurSol(i+1)
        }
      }
    }
  }
}